@@ -1,4 +1,4 @@
-org $028000
+org $828000
 
 { ;8000 - 8047
 _028000: ;a- x-
