@@ -1,4 +1,4 @@
-org $058000
+org $858000
 
 { ;8000 - 805E | a8 x-
 _058000:
