@@ -1,4 +1,4 @@
-org $0A8000
+org $8A8000
 
 { ;A8000 -
 _0A8000:
