@@ -1,4 +1,4 @@
-org $0C8000
+org $8C8000
 
 { ;8000 -
 _0C8000: ;meta tiles
