@@ -1,4 +1,4 @@
-org $0D8000
+org $8D8000
 
 { ;8000 -
 _0D8000: ;tiles
